Fix color contrast issue in Navigation component

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -437,7 +437,7 @@ a:visited {
 
 #underline {
   height: 3px;
-  background: linear-gradient(to bottom, #fd4312, #845ef7);
+  background: linear-gradient(to bottom, #fd4312, #504478);
   width: 120px;
   margin-bottom: 1rem;
   border-radius: 5px;
